# 42-key-glove80-effort-grid

./: HOW-TO-USE.md  README.md  average-trigram-timings.txt  effort-grid-estimates.txt  effortconfig.yaml  i-timings.txt  k-timings.txt  pyproject.toml  raw-trigram-timings.txt  sample-sizes.txt
effort/: __init__.py  calculate.py  cli.py  colorize_estimates.py  config.py  effort.py  keyboard.py
